name:                control
version:             0.1.0
synopsis:            ...
description:         ...
homepage:            https://github.com/iokasimov/control
license:             MIT
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2021 Murat Kasimov
category:            cli
build-type:          Simple
cabal-version:       >= 1.10

executable todo
  main-is: Control/Pandora/Tracker.hs
  other-modules:
    Control.Pandora.Engine.SQLite
    Control.Pandora.Entity.Amount
    Control.Pandora.Entity.Event
    Control.Pandora.Entity.Objective
    Control.Pandora.Entity.Task
    Control.Pandora.Entity.ID
    Control.Pandora.Widgets.Components.Picker
    Control.Pandora.Widgets.Search
    Control.Pandora.Widgets.Overview
    Control.Pandora.TUI
    Control.Pandora.Utils
  build-depends: base == 4.*, pandora, pandora-io, sqlite-simple
  default-extensions:
    DataKinds, ConstraintKinds, ExistentialQuantification, GADTs, QuantifiedConstraints, InstanceSigs
    FlexibleContexts, FlexibleInstances, KindSignatures, StandaloneKindSignatures, LiberalTypeSynonyms, LambdaCase, FunctionalDependencies
    MultiParamTypeClasses, PackageImports, PolyKinds, RankNTypes, ViewPatterns, OverloadedStrings
    ScopedTypeVariables, TypeApplications, TypeFamilies, TypeFamilyDependencies, TypeOperators
  ghc-options: -Wall -fno-warn-tabs -threaded -fprint-potential-instances
